@@ -190,7 +190,7 @@ describe('Topology helper', function() {
 
     it('It should work if start and end are on continous paths', function(done) {
         var topo = Geotrek.TopologyHelper.buildTopologyFromComputedPath(idToLayer,
-                        __inputData(L.latLng([5, 0]), L.latLng([15, 0]), [2,3]));
+                        __inputData(L.latLng([5, 0]), L.latLng([15, 0]), [2, 3]));
 
         // One sub-topology
         assert.equal(topo.serialized.length, 1);
@@ -219,6 +219,44 @@ describe('Topology helper', function() {
             positions: {
                 "0": [0.16751709787175395, 0],
                 "1": [0, 0.4999999999999995]
+            },
+            paths: [1, 2]
+        });
+        done();
+    });
+
+
+    it('It should go through extremities, even if paths have opposite ways', function(done) {
+        var topo = Geotrek.TopologyHelper.buildTopologyFromComputedPath(idToLayer,
+                        __inputData(L.latLng([10, 3]), L.latLng([7, 0]), [1, 2]));
+
+        // One sub-topology
+        assert.equal(topo.serialized.length, 1);
+
+        assert.deepEqual(topo.serialized[0], {
+            offset: 0,
+            positions: {
+                "0": [0.9010250453729739, 1.0],
+                "1": [1.0, 0.6999999999999996]
+            },
+            paths: [1, 2]
+        });
+        done();
+    });
+
+
+    it('It should go through extremities only if it is the shortest way', function(done) {
+        var topo = Geotrek.TopologyHelper.buildTopologyFromComputedPath(idToLayer,
+                        __inputData(L.latLng([10, 3]), L.latLng([2, 0]), [1, 2]));
+
+        // One sub-topology
+        assert.equal(topo.serialized.length, 1);
+
+        assert.deepEqual(topo.serialized[0], {
+            offset: 0,
+            positions: {
+                "0": [0.9010250453729739, 0.0],
+                "1": [0.0, 0.20000000000000026]
             },
             paths: [1, 2]
         });
